# zonotopes

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  ruff.toml
book/: ref.bib  zonotope.typ
docs/: Makefile
docs/source/: api.md  conf.py  index.md  installation.md  usage.md
experiences/: arena.py  attention_only_transformer.py  demo_transformer.py  plot.py  simple_nn.py  verification.py
experiences/notebooks/: 2L-attn.ipynb  abstract_2L-attn.ipynb  nd_zonotope.ipynb  simple_nn.ipynb  simple_nn_.ipynb  zonotope_nd.ipynb
notebooks/: 2L-attn.ipynb  playground.ipynb  plot.ipynb  simple_nn.ipynb  zonotope_nd.ipynb
paper/: main.typ  ref.bib  zonotope.typ
playground/: abstract_transformer.py  attn_only_transformer.py  demo_transformer.py  nn.py  verification.py
tests/: test_base.py  test_base_hcz.py  test_base_hcz_sparse.py  test_functional.py  test_zonotopes.py  utils.py
zonotope/: __init__.py  functional.py  modules.py  nn.py  plot.py  utils.py  zonotope.py
zonotope/classical/: base.py  functional.py  plot.py  z.py
zonotope/hcz/: base.py  dense.py  functional.py  functional_sparse.py  plot.py  sparse.py
zonotope/hybrid_constrained/: __init__.py  functional.py  functional_sparse.py  hcz.py  hcz_sparse.py  hcz_v2.py  optimise.py
zonotope/nn/: attention.py  linear.py
zonotope/nn/concrete/: attn_only_transformer.py  datasets.py  demo_transformer.py  mlp.py  train.py
zonotope/plot/: abstract.py
zonotope_nd/: functional.py  zonotope_nd.py
