[project]
    authors=[{name="Sckathach", email="thomas.winninger68@gmail.com"}]
    dependencies=["einops (>=0.8.1,<0.9.0)", "jaxtyping (>=0.3.1,<0.4.0)", "torch (>=2.6.0,<3.0.0)"]
    description=""
    name="zonotopes"
    readme="README.md"
    requires-python=">=3.13"
    version="0.1.0"

[build-system]
    build-backend="poetry.core.masonry.api"
    requires=["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.group.dev.dependencies]
    mypy="^1.15.0"
    ruff="^0.11.5"

[tool.poetry.group.plot.dependencies]
    matplotlib="^3.10.1"
    numpy="^2.2.4"
    scipy="^1.15.2"

[[tool.mypy.overrides]]
    ignore_missing_imports=true
    module=["scipy.*"]

[tool.pyright]
    ignore=["scipy"]
