[project]
    authors=[{name="Sckathach", email="thomas.winninger@telecom-sudparis.eu"}]
    dependencies=[
        "circuitsvis (>=1.43.3,<2.0.0)",
        "eindex-callum (>=0.1.2,<0.2.0)",
        "einops (>=0.8.1,<0.9.0)",
        "einx[torch] (>=0.3.0,<0.4.0)",
        "jaxtyping (>=0.3.1,<0.4.0)",
        "pytest (>=8.3.5,<9.0.0)",
        "torch (>=2.6.0,<3.0.0)",
        "tqdm (>=4.67.1,<5.0.0)",
    ]
    description=""
    name="zonotope"
    readme="README.md"
    requires-python=">=3.13,<4.0"
    version="0.1.0"

[build-system]
    build-backend="poetry.core.masonry.api"
    requires=["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.group.dev]
    optional=true
    [tool.poetry.group.dev.dependencies]
        mypy="^1.15.0"
        ruff="^0.11.5"

[tool.poetry.group.plot]
    optional=true
    [tool.poetry.group.plot.dependencies]
        jupyter="^1.1.1"
        matplotlib="^3.10.1"
        numpy="^2.2.4"
        scipy="^1.15.2"

[tool.poetry.group.playground.dependencies]
    scikit-learn="^1.6.1"
    transformer-lens="^2.15.0"

[tool.poetry.group.docs]
    optional=true
    [tool.poetry.group.docs.dependencies]
        einops="^0.8.1"
        jaxtyping="^0.3.2"
        linkify-it-py="^2.0.3"
        myst-parser="^4.0.1"
        sphinx="^8.2.3"
        sphinx-autobuild="^2024.10.3"
        sphinx-rtd-theme="^3.0.2"
        sphinxcontrib-mermaid="^1.0.0"
        torch="^2.6.0"

[[tool.mypy.overrides]]
    ignore_missing_imports=true
    module=["circuitsvis.*", "einx.*", "scipy.*", "sklearn.*", "transformer_lens.*"]

[tool.pyright]
    ignore=["circuitsvis", "einx", "scipy", "sklearn", "transformer_lens"]
